# grantee

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: auth.rs  mail.rs  main.rs  model.rs
static/css/: main.css  milligram.css  roboto.css
templates/: base.html.tera  example.html.tera  index.html.tera
templates/auth/: login.html.tera
templates/generic/: error.html.tera
templates/grants/: aktivisti_grant_form.html.tera  event_grant_form.html.tera  list.html.tera  view_aktivisti_grant.html.tera  view_event_grant.html.tera  view_grant.html.tera
templates/grants/emails/: abgelehnt.html.tera  angenommen.html.tera  ausgezahlt.html.tera  eingang.html.tera  not_funded.html.tera
templates/macros/: form_fields.html.tera  forms.html.tera  show_grant.html.tera
