[package]
name = "grantee"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"
publish = false


[dependencies]
rocket = "0.4.5"
sled = "0.32.0"
parity-scale-codec = { version = "1.3.1", features = ["full", "derive"] }
validator = "0.10"
validator_derive = "0.10"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates", "uuid"]
