[package]
name = "grantee"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"
publish = false


[dependencies]
rocket = "0.4.5"
sled = "0.32.0"
parity-scale-codec = { version = "1.3.4", features = ["full", "derive"] }
validator = "0.10"
validator_derive = "0.10"
uuid = {version = "0.7", features = ["v4"] }
serde = { version = "1.0.114", features = ["derive"] }
rand = "0.7.3"
lettre = "0.9.3"
lettre_email = "0.9.3"
parking_lot = "0.10"
blake2 = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates", "uuid"]

[dev-dependencies]
url = "1.7.2"
tempfile = "3.1.0"
select = "0.5.0"
